feat: add route to get all available devices
