# backend/src/routes/device.ts
@@ -1,0 +1,6 @@
+import * as deviceController from "../controllers/device-controller"
+import { Request, Response, Router } from "express";
+
+export const deviceRouter = Router()
+
+deviceRouter.get("/unlinked", deviceController.getUnlinkedDevices)
